--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-family: 'Roboto';
+  font-family: 'Quicksand';
   min-height: 100vh;
 }
 
@@ -15,6 +15,13 @@ body {
   background-image: linear-gradient(rgb(41, 144, 233), rgb(0, 38, 89));
   height: 100%;
   position: relative;
+}
+
+@media (max-width: 768px) {
+  body {
+    padding-left: 0;
+    padding-top: 96px;
+  }
 }
 
 a {
